--- a/package.json
+++ b/package.json
@@ -11,14 +11,28 @@
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.12",
+    "@react-native-masked-view/masked-view": "0.2.6",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/drawer": "^6.4.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
     "expo": "~45.0.0",
+    "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-bouncy-checkbox": "^2.1.10",
+    "react-native-checkbox-reanimated": "^0.1.1",
     "react-native-elements": "^3.4.2",
-    "react-native-web": "0.17.7"
+    "react-native-form-validator": "^0.5.1",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-svg": "^12.3.0",
+    "react-native-web": "0.17.7",
+    "react-navigation": "^4.4.4",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
