--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-form-validator": "^0.5.1",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-reanimated": "~2.8.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^12.3.0",
     "react-native-web": "0.17.7",
     "react-navigation": "^4.4.4",
